--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && npm install && cd ../frontend && npm install && npm run build"
+buildCommand = "npm install && cd frontend && npm install && npm run build"
 
 [deploy]
-startCommand = "cd backend && npm start"
+startCommand = "cd backend && npm install && npm start"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
