--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ buildCommand = "npm install && cd frontend && npm install && npm run build"
 
 [deploy]
 startCommand = "cd backend && npm install && npm start"
-healthcheckPath = "/"
+healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10 
