Update deployment configuration

--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,10 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && cd frontend && npm install && npm run build"
+buildCommand = "cd frontend && npm install && npm run build && cd ../backend && npm install"
 
 [deploy]
-startCommand = "cd backend && npm install && npm start"
+startCommand = "cd backend && npm start"
 healthcheckPath = "/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10 
